Fixes: #1306 Java PermSize command line flag removed in Java 8